# transit-project

./: .gitignore  api.py  demo_consumer.py  docker-compose.yml  main.py  out.txt  output.txt  pyproject.toml
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--5235349422855690738.wt  collection-2--5235349422855690738.wt  collection-4--5235349422855690738.wt  collection-7--5235349422855690738.wt  index-1--5235349422855690738.wt  index-3--5235349422855690738.wt  index-5--5235349422855690738.wt  index-6--5235349422855690738.wt  index-8--5235349422855690738.wt  index-9--5235349422855690738.wt  sizeStorer.wt
data/.mongodb/mongosh/: 68fdb3a4057c0eaff074e399_log  68fdb3a4add18f654874e399_log  68fdb3a65c543ba10a74e399_log  config
data/diagnostic.data/: metrics.2025-10-26T05-37-38Z-00000  metrics.interim
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  Data.ts  Map.tsx  index.html  index.tsx
frontend/src/api/: database.ts
frontend/src/components/: FilterTable.tsx  Map.tsx
frontend/src/hooks/: usePositions.ts
frontend/src/stores/: filterStore.ts
google_transit/: calendar.txt  calendar_dates.txt  direction_names_exceptions.txt  feed_info.txt  routes.txt  signup_periods.txt  stops.txt  transfers.txt  trips.txt
