[project]
name = "transit-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.12.1",
    "fastapi[standard]>=0.120.2",
    "gtfs-realtime-bindings>=1.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
